Fix job date alignment

--- a/odin-react-cv-application/src/styles/ResumeView.css
+++ b/odin-react-cv-application/src/styles/ResumeView.css
@@ -37,3 +37,7 @@ section {
 .full-name {
     font-size: 30px;
 }
+
+.date {
+    text-align: end;
+}
